k8s/apps/network/traefik/internal/dashboard.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-internal-dashboard
  namespace: network
spec:
  ports:
    - name: traefik
      port: 8080
      protocol: TCP
      targetPort: traefik
  selector:
    app.kubernetes.io/instance: traefik-internal-network
    app.kubernetes.io/name: traefik
  type: ClusterIP
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: traefik-internal
spec:
  hostnames:
    - traefik-internal.${SECRET_DOMAIN}
  parentRefs:
    - name: internal
      namespace: network
      sectionName: websecure
  rules:
    - backendRefs:
        - name: api@internal
          kind: TraefikService
          port: 8080
      matches:
        - path:
            type: PathPrefix
            value: /
