k8s/apps/network/traefik/internal/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    external-dns.alpha.kubernetes.io/target: internal.jnobrega.com
    hajimari.io/icon: simple-icons:traefikproxy
  name: traefik-internal
  namespace: network
spec:
  ingressClassName: internal
  rules:
  - host: traefik-internal.${SECRET_DOMAIN}
    http:
      paths:
      - backend:
          service:
            name: traefik-internal
            port:
              number: 8080
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - traefik-internal.${SECRET_DOMAIN}
    secretName: ${SECRET_DOMAIN}-tls
