k8s/apps/network/traefik/internal/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: traefik-internal
spec:
  hostnames:
    - traefik-internal.${SECRET_DOMAIN}
  parentRefs:
    - name: internal
      namespace: network
      sectionName: websecure
  rules:
    - backendRefs:
        - name: traefik-internal
          port: 8080
      matches:
        - path:
            type: PathPrefix
            value: /
